--- a/fmegapl.html
+++ b/fmegapl.html
@@ -410,6 +410,8 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
                 if (curr) {
                     setPrev(cases.find(c => c.name === curr.name) || curr);
                 }
+                // 画像パスを追加
+                sel.imagePath = `images/${sel.name}.png`;
                 setCurr(sel); setScr(finalScr);
                 setT(0); setRun(false); setRdy(false); setPrac(true);
             };
@@ -550,7 +552,15 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
                             ),
                             prev && React.createElement('div', { className: 'bg-white rounded-2xl shadow-xl p-6' },
                                 React.createElement('div', { className: 'flex items-center justify-between mb-4' },
-                                    React.createElement('h3', { className: 'text-lg font-bold text-gray-800' }, '前回: ', prev.name),
+                                    React.createElement('div', { className: 'flex items-center gap-4' },
+                                        prev.imagePath && React.createElement('img', {
+                                            src: prev.imagePath,
+                                            alt: prev.name,
+                                            className: 'w-8 h-8 object-contain rounded border border-gray-200',
+                                            onError: (e) => { e.target.style.display = 'none'; }
+                                        }),
+                                        React.createElement('h3', { className: 'text-lg font-bold text-gray-800' }, '前回: ', prev.name)
+                                    ),
                                     React.createElement('button', {
                                         onClick: () => setWeakCases(weakSet.has(prev.name) ? weakCases.filter(x => x !== prev.name) : [...weakCases, prev.name]),
                                         className: `px-4 py-2 rounded-lg font-semibold text-sm ${weakSet.has(prev.name) ? 'bg-red-500 text-white hover:bg-red-600' : 'bg-gray-200 text-gray-700 hover:bg-gray-300'}`
@@ -656,12 +666,20 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
                                         React.createElement('span', { className: `transition-transform ${exp.has(l) ? 'rotate-90' : ''}` }, '▶'),
                                         l, 'グループ (', CASES.filter(c => c.startsWith(l)).length, 'ケース)'
                                     ),
-                                    exp.has(l) && React.createElement('div', { className: 'ml-6 flex flex-wrap gap-2' },
+                                    exp.has(l) && React.createElement('div', { className: 'ml-6 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-3' },
                                         CASES.filter(c => c.startsWith(l)).map(c => React.createElement('button', {
                                             key: c,
                                             onClick: () => setSelC(p => { const n = new Set(p); n.has(c) ? n.delete(c) : n.add(c); return n; }),
-                                            className: `px-2 py-1 rounded text-sm font-medium ${selC.has(c) ? 'bg-pink-500 text-white' : 'bg-gray-100 text-gray-700 hover:bg-gray-200'}`
-                                        }, c))
+                                            className: `relative p-2 rounded-lg border-2 transition-all ${selC.has(c) ? 'border-pink-500 bg-pink-50' : 'border-gray-200 bg-white hover:border-gray-300'}`
+                                        },
+                                            React.createElement('img', {
+                                                src: `images/${c}.png`,
+                                                alt: c,
+                                                className: 'w-full aspect-square object-contain mb-1',
+                                                onError: (e) => { e.target.src = 'data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100"%3E%3Crect fill="%23f3f4f6" width="100" height="100"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="sans-serif" font-size="12" fill="%239ca3af"%3ENo Image%3C/text%3E%3C/svg%3E'; }
+                                            }),
+                                            React.createElement('div', { className: `text-xs font-medium text-center ${selC.has(c) ? 'text-pink-700' : 'text-gray-700'}` }, c)
+                                        ))
                                     )
                                 ))
                             )
@@ -757,10 +775,11 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
                                     className: 'flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100'
                                 },
                                     React.createElement('div', { className: 'flex items-center gap-4 flex-1' },
-                                        c.image && React.createElement('img', {
-                                            src: c.image,
+                                        (c.image || `images/${c.name}.png`) && React.createElement('img', {
+                                            src: c.image || `images/${c.name}.png`,
                                             alt: c.name,
-                                            className: 'w-16 h-16 object-cover rounded'
+                                            className: 'w-8 h-8 object-contain rounded border border-gray-200',
+                                            onError: (e) => { e.target.style.display = 'none'; }
                                         }),
                                         React.createElement('div', { className: 'flex-1' },
                                             React.createElement('div', { className: 'font-semibold text-gray-800' }, c.name),
