--- a/fmegapl.html
+++ b/fmegapl.html
@@ -226,6 +226,12 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
 
         const CASES = ['A1+','A1-','A2+','A2-','B1+','B1-','B2+','B2-','C1+','C1-','C2+','C2-','C3+','C3-','C4+','C4-','C5+','C5-','C6+','C6-','D+','D-','E1','E2','E3','F1+','F1-','F2+','F2-','F3+','F3-','F4+','F4-','F5+','F5-','G1+','G1-','G2+','G2-','H1+','H1-','H2+','H2-','I1+','I1-','I2+','I2-','I3+','I3-','I4+','I4-','I5+','I5-','I6+','I6-','J1+','J1-','J2+','J2-','J3+','J3-','K1+','K1-','K2+','K2-','L1','L2','L3+','L3-','L4+','L4-','L5+','L5-','L6+','L6-','M','N1+','N1-','N2+','N2-','O','P1+','P1-','P2+','P2-','P3+','P3-','P4+','P4-','Q1+','Q1-','Q2+','Q2-','R1+','R1-','R2+','R2-','R3+','R3-','R4+','R4-','S1+','S1-','S2+','S2-','S3+','S3-','S4+','S4-','S5+','S5-','S6+','S6-','T1','T2+','T2-','T3+','T3-','T4+','T4-','U1+','U1-','U2+','U2-','V1+','V1-','V2+','V2-','V3+','V3-','V4+','V4-','W','X1','X2','X3','X4','X5+','X5-','X6+','X6-','X7+','X7-','Y1+','Y1-','Y2+','Y2-','Y3+','Y3-','Z1','Z2','Z3'];
 
+        // GitHubの画像ベースURL（ここを自分のリポジトリURLに変更してください）
+        const IMAGE_BASE_URL = 'https://github.com/RamiKamado/fmegapl/main/images';
+        
+        // 画像URLを取得する関数
+        const getImageUrl = (caseName) => `${IMAGE_BASE_URL}/${caseName}.png`;
+
         function MegaminxPLLTrainer() {
             const [cases, setCases] = useState(() => {
                 try {
@@ -411,7 +417,7 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
                     setPrev(cases.find(c => c.name === curr.name) || curr);
                 }
                 // 画像パスを追加
-                sel.imagePath = `images/${sel.name}.png`;
+                sel.imagePath = getImageUrl(sel.name);
                 setCurr(sel); setScr(finalScr);
                 setT(0); setRun(false); setRdy(false); setPrac(true);
             };
@@ -775,8 +781,8 @@ Z3,R U' R U R U' R' U' R U R U2 R U' R U' R2' U' R2' ;`;
                                     className: 'flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100'
                                 },
                                     React.createElement('div', { className: 'flex items-center gap-4 flex-1' },
-                                        (c.image || `images/${c.name}.png`) && React.createElement('img', {
-                                            src: c.image || `images/${c.name}.png`,
+                                        (c.image || getImageUrl(c.name)) && React.createElement('img', {
+                                            src: c.image || getImageUrl(c.name),
                                             alt: c.name,
                                             className: 'w-8 h-8 object-contain rounded border border-gray-200',
                                             onError: (e) => { e.target.style.display = 'none'; }
